Fix top gray area overflowing into bottom area when no viewer

--- a/static/css/sass/cdr_ui_styles.scss
+++ b/static/css/sass/cdr_ui_styles.scss
@@ -441,7 +441,7 @@ img.data-thumb {
 
 .child-records {
   font-size: 16px;
-  margin: 50px 50px 25px 50px;
+  margin: 30px 50px 25px 50px;
 
   h3 {
     font-size: 16px;
@@ -649,6 +649,11 @@ img.data-thumb {
     }
 
   }
+}
+
+.full_record_bottom {
+  padding-top: 30px;
+  background-color: white;
 }
 
 /*@TODO remove breadcrumb css one full record page is converted to Vue */
